Added authorization header field on swagger ui
